fix "-r, -r" in man page

--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -30,7 +30,7 @@ terminal, recursive searches are performed as if \fB-r\fR is specified.  To
 force reading from standard input, specify `-' as a \fIFILE\fR argument.
 .PP
 Directories specified as \fIFILE\fR arguments are searched without recursing
-deeper into subdirectories, unless \fB-r\fR, \fB-r\fR, or \fB-2\fR...\fB-9\fR
+deeper into subdirectories, unless \fB-R\fR, \fB-r\fR, or \fB-2\fR...\fB-9\fR
 is specified to search subdirectories.
 .PP
 Hidden files and directories are ignored in recursive searches.  Option
